--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </ul>
     <div class="copyright">
         <p>Copyright © 1998 - 2013 Tencent. All Rights Reserved.</p>
-        <p>腾讯公司 版权所有 More Templates <a href="#">17素材网</a> - Collect from <a href="#">网页模板</a></p>
+        <p>腾讯公司 版权所有 More Templates <a target="_blank" href="www.weibo.com/sghbukn">我的微博</a> - Collect from <a href="#">网页模板</a></p>
     </div>
     <div class="line"></div>
 </div>
